Bug 268196 - ActiveToolTip correct priority
Summary: ActiveToolTip correct priority
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: util (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 1.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-11 10:24 UTC by Julien Desgats
Modified: 2011-03-19 10:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This patches fixes the bug (1.78 KB, patch)
2011-03-11 10:25 UTC, Julien Desgats
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Desgats 2011-03-11 10:24:07 UTC
Version:           git master (using KDE 4.6.0) 
OS:                Linux

On the function ActiveToolTip::showToolTip, the documentation says that a priority of 0.0 makes visibility exclusive to given tooltip. However, thid is not currently the case : all tooltips are hidden.

This patch makes that behavior according to documentation.

Reproducible: Always




This feature is not currently used anyway. I needed it to an improvement on debugger tooltips. Review request is comming.
Comment 1 Julien Desgats 2011-03-11 10:25:44 UTC
Created attachment 57859 [details]
This patches fixes the bug
Comment 2 Milian Wolff 2011-03-15 21:41:30 UTC
uhm looks good I'd say - but please put patches always on reviewboard in the future.
Comment 3 Julien Desgats 2011-03-19 10:47:40 UTC
Git commit b0161ee4fb9ed848ad9763d7a41afae2f1578384 by Julien Desgats.
Committed on 19/03/2011 at 10:34.
Pushed by desgats into branch 'master'.

Fixes exclusive mode in active tooltips

BUG: 268196

M  +9    -8    util/activetooltip.cpp     

http://commits.kde.org/kdevplatform/b0161ee4fb9ed848ad9763d7a41afae2f1578384