Fixes exclusive mode in active tooltips

BUG: 268196