util/activetooltip.cpp
@@ -244,7 +244,7 @@ namespace {
 }
 
 void ActiveToolTipManager::doVisibility() {
-    bool hideAll = false;
+    bool exclusive = false;
     int lastBottomPosition = -1;
     int lastLeftPosition = -1;
     QRect fullGeometry; //Geometry of all visible tooltips together
@@ -252,7 +252,7 @@ void ActiveToolTipManager::doVisibility() {
     for(ToolTipPriorityMap::const_iterator it = registeredToolTips.constBegin(); it != registeredToolTips.constEnd(); ++it) {
         QPointer< ActiveToolTip > w = (*it).first;
         if(w) {
-            if(hideAll) {
+            if(exclusive) {
                 (w)->hide();
             }else{
                 QRect geom = (w)->geometry();
@@ -274,7 +274,7 @@ void ActiveToolTipManager::doVisibility() {
                     fullGeometry = fullGeometry.united((w)->geometry());
             }
             if(it.key() == 0) {
-                hideAll = true;
+                exclusive = true;
             }
         }
     }
@@ -313,11 +313,12 @@ void ActiveToolTipManager::doVisibility() {
         }
     }
 
-    //Final step: Show all tooltips
-    if(!hideAll) {
-        for(ToolTipPriorityMap::const_iterator it = registeredToolTips.constBegin(); it != registeredToolTips.constEnd(); ++it)
-            if(it->first && masterWidget(it->first)->isActiveWindow())
-                (*it).first->show();
+    //Final step: Show tooltips
+    for(ToolTipPriorityMap::const_iterator it = registeredToolTips.constBegin(); it != registeredToolTips.constEnd(); ++it) {
+        if(it->first && masterWidget(it->first)->isActiveWindow())
+            (*it).first->show();
+        if(exclusive)
+            break;
     }
 }
 
